<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory app:title="Sync settings">
        <Preference
            app:key="last_sync_info"
            app:title="@string/last_sync"
            app:summary="never"
            app:icon="@drawable/ic_sync_grey_24dp"/>
        <Preference
            app:key="next_sync_scheduled"
            app:title="@string/next_sync_scheduled"
            app:summary="Today"
            app:icon="@drawable/ic_hourglass_empty_grey_24dp"/>
        <SwitchPreferenceCompat
            app:key="sync_on_mobile_data"
            app:title="@string/sync_on_mobile_data"
            app:summaryOn="@string/on"
            app:summaryOff="@string/off"
            app:icon="@drawable/ic_swap_vert_grey_24dp"/>
        <Preference
            app:key="mobile_sync_info"
            app:title=""
            app:summary="@string/mobile_sync_info"
            app:icon="@drawable/ic_info_outline_grey_16dp"/>
    </PreferenceCategory>
</androidx.preference.PreferenceScreen>